Fix jumping on hover

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -385,13 +385,13 @@ body {
 
         a.subevent {
             &:hover {
-                border-top: none;
+                border-top-color: transparent;
                 border-radius: var(--event-border-radius) 0 0 var(--event-border-radius);
                 background-color: var(--card-bg-hover)
             }
 
             &:hover + .subevent {
-                border-top: none;
+                border-top-color: transparent;
             }
         }
 
